add drag. but with bugs

--- a/index.html
+++ b/index.html
@@ -34,32 +34,32 @@
 					<div class="game">
 						<div class="game_btn game_line game_line1">
 							<div class="game_box"><img src="img/game_box_icon15.svg" class="elemImg"></div>
-							<div class="game_box"><img src="img/game_box_icon6.svg" class="elemImg"></div>
-							<div class="game_box"><img src="img/game_box_icon3.svg" class="elemImg"></div>
+							<div class="game_box" data-drag="2"><img src="img/game_box_icon2.svg" class="elemImg" data-drag="1"></div>
+							<div class="game_box"><img src="img/game_box_icon6.svg" class="elemImg" data-drag="6"></div>
+							<div class="game_box"><img src="img/game_box_icon3.svg" class="elemImg" data-drag="3"></div>
 							<div class="game_box"><img src="img/game_box_icon13.svg" class="elemImg"></div>
 							<div class="game_box"><img src="img/game_box_icon11.svg" class="elemImg"></div>
 							<div class="game_box"><img src="img/game_box_icon10.svg" class="elemImg"></div>
-							<div class="game_box"><img src="img/game_box_icon4.svg" class="elemImg"></div>
-							<div class="game_box"><img src="img/game_box_icon8.svg" class="elemImg"></div>
+							<div class="game_box"><img src="img/game_box_icon8.svg" class="elemImg" data-drag="8"></div>
 						</div>
 						<div class="game_board game_line">
-							<div class="game_box game_box_board"><img src="img/game_empty_box.svg"></div>
-							<div class="game_box game_box_board "><img src="img/game_empty_box.svg"></div>
-							<div class="game_box game_box_board"><img src="img/game_box_icon3.svg"></div>
-							<div class="game_box game_box_board "><img src="img/game_empty_box.svg"></div>
-							<div class="game_box game_box_board "><img src="img/game_empty_box.svg"></div>
-							<div class="game_box game_box_board "><img src="img/game_empty_box.svg"></div>
-							<div class="game_box game_box_board "><img src="img/game_empty_box.svg"></div>
-							<div class="game_box game_box_board "><img src="img/game_empty_box.svg"></div>
+							<div class="game_box game_box_board" data-drop="1"><img src="img/game_empty_box.svg"></div>
+							<div class="game_box game_box_board" data-drop="2"><img src="img/game_empty_box.svg"></div>
+							<div class="game_box game_box_board" data-drop="3"><img src="img/game_empty_box.svg"></div>
+							<div class="game_box game_box_board" data-drop="2"><img src="img/game_empty_box.svg"></div>
+							<div class="game_box game_box_board" data-drop="5"><img src="img/game_empty_box.svg"></div>
+							<div class="game_box game_box_board" data-drop="6"><img src="img/game_empty_box.svg"></div>
+							<div class="game_box game_box_board" data-drop="7"><img src="img/game_empty_box.svg"></div>
+							<div class="game_box game_box_board" data-drop="8"><img src="img/game_empty_box.svg"></div>
 						</div>
 						<div class="game_btn game_line game_line2">
 							<div class="game_box"><img src="img/game_box_icon9.svg" class="elemImg"></div>
-							<div class="game_box"><img src="img/game_box_icon7.svg" class="elemImg"></div>
+							<div class="game_box"><img src="img/game_box_icon7.svg" class="elemImg" data-drag="7"></div>
 							<div class="game_box"><img src="img/game_box_icon14.svg" class="elemImg"></div>
-							<div class="game_box"><img src="img/game_box_icon5.svg" class="elemImg"></div>
-							<div class="game_box"><img src="img/game_box_icon1.svg" class="elemImg"></div>
+							<div class="game_box"><img src="img/game_box_icon5.svg" class="elemImg" data-drag="5"></div>
+							<div class="game_box"><img src="img/game_box_icon1.svg" class="elemImg" data-drag="1"></div>
 							<div class="game_box"><img src="img/game_box_icon16.svg" class="elemImg"></div>
-							<div class="game_box"><img src="img/game_box_icon2.svg" class="elemImg"></div>
+							<div class="game_box"><img src="img/game_box_icon2.svg" class="elemImg" data-drag="2"></div>
 							<div class="game_box"><img src="img/game_box_icon12.svg" class="elemImg"></div>
 						</div>
 					</div>
