fix problem with wrong drop on webkit mobile

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 	</div>
 	<!--wrap-->
 	<script src="js/index.js"></script>
+	<!-- <script src="js/dragndrop.min.js"></script> -->
 </body>
 
 </html>
